--- a/dashboard.html
+++ b/dashboard.html
@@ -214,18 +214,18 @@
                                     <div class="ct-slice-pie" id="pie1"></div>
                                 </div>
                                 <div class="card-content">
-                                    <h4 class="title">Mi rol</h4>
+                                    <h4 class="title">Mi Rol</h4>
                                     <p class="category">
                                         
                                     </p>
                                 </div>
                                 <div class="card-footer">
                                     <div class="stats">
-                                        <span class="text-success"><img src="../app/assets/icons/scalpel.svg"></i></span> Cirujano 
+                                        <span class="text-success"><img src="app/assets/icons/scalpel.svg"></i></span> Cirujano 
                                         <span style="opacity: 0">__</span>
-                                        <span class="text-success"><img src="../app/assets/icons/scissors.svg"></i></span> 1<sup>o</sup> ayudante
+                                        <span class="text-success"><img src="app/assets/icons/scissors.svg"></i></span> 1<sup>o</sup> ayudante
                                         <span style="opacity: 0">__</span>
-                                        <span class="text-success"><img src="../app/assets/icons/band-aid.svg"></i></span> 2<sup>o</sup> ayudante  
+                                        <span class="text-success"><img src="app/assets/icons/band-aid.svg"></i></span> 2<sup>o</sup> ayudante  
                                         
                                     </div>
                                 </div>
