--- a/entrada3.html
+++ b/entrada3.html
@@ -199,14 +199,14 @@
                                                 <td>Puncion Cisternal, Via Lateral</td>
                                                 <td>
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="sim1" id="sim1" />
-                                                        <label class="btn btn-sm" for="sim1">Min. Inv.</label>
+                                                        <input class="btn-sim" type="checkbox" name="mi1" id="mi1" />
+                                                        <label class="btn btn-sm" for="mi1">Min. Inv.</label>
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="mi1" id="mi1" />
-                                                        <label class="btn btn-sm" for="mi1">Conversión</label>
+                                                        <input class="btn-sim" type="checkbox" name="con1" id="con1" />
+                                                        <label class="btn btn-sm" for="con1">Conversión</label>
                                                     </div>
                                                 </td>
                                             </tr>
@@ -214,14 +214,14 @@
                                                 <td>Fiebre Paratifoidea B</td>
                                                 <td>
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="sim2" id="sim2" />
-                                                        <label class="btn btn-sm" for="sim2">Min. Inv.</label>
+                                                        <input class="btn-sim" type="checkbox" name="mi2" id="mi2" />
+                                                        <label class="btn btn-sm" for="mi2">Min. Inv.</label>
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="mi2" id="mi2" />
-                                                        <label class="btn btn-sm" for="mi2">Conversión</label>
+                                                        <input class="btn-sim" type="checkbox" name="con2" id="con2" />
+                                                        <label class="btn btn-sm" for="con2">Conversión</label>
                                                     </div>
                                                 </td>
                                             </tr>
@@ -229,14 +229,14 @@
                                                 <td>Colera Debido A Vibrio Cholerae O1, Biotipo El Tor</td>
                                                 <td>
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="sim3" id="sim3" />
-                                                        <label class="btn btn-sm" for="sim3">Min. Inv.</label>
+                                                        <input class="btn-sim" type="checkbox" name="mi3" id="mi3" />
+                                                        <label class="btn btn-sm" for="mi3">Min. Inv.</label>
                                                     </div>
                                                 </td>
                                                 <td>    
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="mi3" id="mi3" />
-                                                        <label class="btn btn-sm" for="mi3">Conversión</label>
+                                                        <input class="btn-sim" type="checkbox" name="con3" id="con3" />
+                                                        <label class="btn btn-sm" for="con3">Conversión</label>
                                                     </div>
                                                 </td>
                                            </tr>
@@ -244,14 +244,14 @@
                                                 <td>Otras Infecciones Intestinales Debidas A Escherichia Coli</td>
                                                 <td>
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="sim4" id="sim4" />
-                                                        <label class="btn btn-sm" for="sim4">Min. Inv.</label>
+                                                        <input class="btn-sim" type="checkbox" name="mi4" id="mi4" />
+                                                        <label class="btn btn-sm" for="mi4">Min. Inv.</label>
                                                     </div>
                                                 </td>
                                                 <td>    
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="mi4" id="mi4" />
-                                                        <label class="btn btn-sm" for="mi4">Conversión</label>
+                                                        <input class="btn-sim" type="checkbox" name="con4" id="con4" />
+                                                        <label class="btn btn-sm" for="con4">Conversión</label>
                                                     </div>
                                                 </td>
                                             </tr>
@@ -259,14 +259,14 @@
                                                 <td>Giardiasis [Lambliasis]</td>
                                                 <td>
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="sim5" id="sim5" />
-                                                        <label class="btn btn-sm" for="sim5">Min. Inv.</label>
+                                                        <input class="btn-sim" type="checkbox" name="mi5" id="mi5" />
+                                                        <label class="btn btn-sm" for="mi5">Min. Inv.</label>
                                                     </div>
                                                 </td>
                                                 <td>    
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="mi5" id="mi5" />
-                                                        <label class="btn btn-sm" for="mi5">Conversión</label>
+                                                        <input class="btn-sim" type="checkbox" name="con5" id="con5" />
+                                                        <label class="btn btn-sm" for="con5">Conversión</label>
                                                     </div>
                                                 </td>
                                             </tr>
@@ -274,14 +274,14 @@
                                                 <td>Isosporiasis</td>
                                                 <td>
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="sim6" id="sim6" />
-                                                        <label class="btn btn-sm" for="sim6">Min. Inv.</label>
+                                                        <input class="btn-sim" type="checkbox" name="mi6" id="mi6" />
+                                                        <label class="btn btn-sm" for="mi6">Min. Inv.</label>
                                                     </div>
                                                 </td>
                                                 <td>    
                                                     <div class="btn-sim">
-                                                        <input class="btn-sim" type="checkbox" name="mi6" id="mi6" />
-                                                        <label class="btn btn-sm" for="mi6">Conversión</label>
+                                                        <input class="btn-sim" type="checkbox" name="con6" id="con6" />
+                                                        <label class="btn btn-sm" for="con6">Conversión</label>
                                                     </div>
                                                 </td>
                                             </tr>
