--- a/entrada4.html
+++ b/entrada4.html
@@ -154,7 +154,7 @@
 
                 <!-- Datos Pacientes Check Table -->
                 <div class="row">
-                        <div class="col-lg-6 col-md-12">
+                        <div class="col-lg-12 col-md-12">
                             <div class="card card-nav-tabs">
                                 <div class="card-header" data-background-color="purple">
                                     <div class="nav-tabs-navigation">
@@ -192,6 +192,15 @@
                                                             </div>
                                                         </td>
                                                         <td>Realicé la Cervicotomía</td>
+                                                             <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes">
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>Cerré la Cervicotomía</td>
+
                                                         <!-- <td class="td-actions text-right">
                                                             <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-simple btn-xs">
                                                                 <i class="material-icons">edit</i>
@@ -209,20 +218,8 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Cerré la Cervicotomía</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>
-                                                            <div class="checkbox">
-                                                                <label>
-                                                                    <input type="checkbox" name="optionsCheckboxes">
-                                                                </label>
-                                                            </div>
-                                                        </td>
                                                         <td>Realicé la Toracotomía</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>
+                                                             <td>
                                                             <div class="checkbox">
                                                                 <label>
                                                                     <input type="checkbox" name="optionsCheckboxes">
@@ -240,6 +237,14 @@
                                                             </div>
                                                         </td>
                                                         <td>Realicé la Laparotomía</td>
+                                                             <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes">
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>Cerré la Laparotomía</td>
                                                     </tr>
                                                     <tr>
                                                         <td>
@@ -249,29 +254,16 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Cerré la Laparotomía</td>
-                                                    </tr>
-                                                     <tr>
-                                                        <td>
-                                                            <div class="checkbox">
-                                                                <label>
-                                                                    <input type="checkbox" name="optionsCheckboxes">
-                                                                </label>
-                                                            </div>
-                                                        </td>
                                                         <td>Realicé Anastomosis Visceral</td>
-                                                    </tr>
-                                                     <tr>
-                                                        <td>
+                                                             <td>
                                                             <div class="checkbox">
                                                                 <label>
                                                                     <input type="checkbox" name="optionsCheckboxes">
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Cerré Anastomosis Visceral</td>
+                                                        <td>Realicé Anastomosis Vascular</td>
                                                     </tr>
-
                                                 </tbody>
                                             </table>
                                         </div>
@@ -286,7 +278,16 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Realicé la Cervicotomía</td>
+                                                        <td>Neumotorax / Hemotorax</td>
+                                                             <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes">
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>Estenosis</td>
+
                                                         <!-- <td class="td-actions text-right">
                                                             <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-simple btn-xs">
                                                                 <i class="material-icons">edit</i>
@@ -304,7 +305,15 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Cerré la Cervicotomía</td>
+                                                        <td>Evisceracion</td>
+                                                             <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes">
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>Filtracion</td>
                                                     </tr>
                                                     <tr>
                                                         <td>
@@ -314,7 +323,15 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Realicé la Toracotomía</td>
+                                                        <td>Fistula</td>
+                                                             <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes">
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>ISO</td>
                                                     </tr>
                                                     <tr>
                                                         <td>
@@ -324,7 +341,15 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Cerré la Toracotomía</td>
+                                                        <td>Lesion Via Biliar</td>
+                                                             <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes">
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>Recidiva</td>
                                                     </tr>
                                                     <tr>
                                                         <td>
@@ -334,7 +359,15 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Realicé la Laparotomía</td>
+                                                        <td>Sangrado</td>
+                                                             <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes">
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>Trombosis</td>
                                                     </tr>
                                                     <tr>
                                                         <td>
@@ -344,29 +377,16 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Cerré la Laparotomía</td>
-                                                    </tr>
-                                                     <tr>
-                                                        <td>
+                                                        <td>Muerte</td>
+                                                             <td>
                                                             <div class="checkbox">
                                                                 <label>
                                                                     <input type="checkbox" name="optionsCheckboxes">
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Realicé Anastomosis Visceral</td>
+                                                        <td>Otra</td>
                                                     </tr>
-                                                     <tr>
-                                                        <td>
-                                                            <div class="checkbox">
-                                                                <label>
-                                                                    <input type="checkbox" name="optionsCheckboxes">
-                                                                </label>
-                                                            </div>
-                                                        </td>
-                                                        <td>Cerré Anastomosis Visceral</td>
-                                                    </tr>
-
                                                 </tbody>
                                             </table>
                                         </div>
@@ -396,8 +416,8 @@
                                     <label class="custom-control custom-radio" >                
                                         <input id="radio7" name="radio" type="radio" class="custom-control-input">
                                         <figure class="figure mx-auto align-middle">
-                                            <img src="app/assets/icons/feliz.svg" class="rounded mx-auto" alt="Ele">
-                                            <figcaption class="text-center figure-caption">Electiva</figcaption>
+                                            <img src="app/assets/icons/feliz.svg" class="rounded mx-auto" alt="feliz">
+                                            <figcaption class="text-center figure-caption">Feliz</figcaption>
                                         </figure>                                        
                                     </label>          
                                 </div>
@@ -405,8 +425,8 @@
                                     <label class="custom-control custom-radio">                
                                         <input id="radio8" name="radio" type="radio" class="custom-control-input">
                                         <figure class="mx-auto">
-                                            <img src="app/assets/icons/neutral.svg" class="rounded mx-auto" alt="Urg">
-                                            <figcaption class="text-center figure-caption">Urgente</figcaption>
+                                            <img src="app/assets/icons/neutral.svg" class="rounded mx-auto" alt="neutral">
+                                            <figcaption class="text-center figure-caption">Neutral</figcaption>
                                         </figure>                                        
                                     </label>
                                 </div>
@@ -414,8 +434,8 @@
                                     <label class="custom-control custom-radio">                
                                         <input id="radio9" name="radio" type="radio" class="custom-control-input">
                                         <figure class="figure mx-auto">
-                                            <img src="app/assets/icons/triste.svg" class="rounded mx-auto" alt="Emerg">
-                                            <figcaption class="text-center figure-caption">Emergente</figcaption>
+                                            <img src="app/assets/icons/triste.svg" class="rounded mx-auto" alt="triste">
+                                            <figcaption class="text-center figure-caption">Triste</figcaption>
                                         </figure>
                                     </label>
                                 </div>
@@ -427,8 +447,9 @@
                     
             
                     <!-- Next Button -->
-                    <div class="pull-right">
-                        <a href="entrada4.html" class="btn btn-primary">Guardar</a>
+                    <div class="">
+                        <button type="submit" class="btn btn-info pull-right" onclick="material.showNotification('bottom','center')"><i class="material-icons">save</i>
+                        </button>
                     </div>
 
 
