--- a/user.html
+++ b/user.html
@@ -125,7 +125,7 @@
                         </ul>
                         <form class="navbar-form navbar-right" role="search">
                             <div class="form-group  is-empty">
-                                <input type="text" class="form-control" placeholder="Search">
+                                <input type="text" class="form-control" placeholder="Buscar">
                                 <span class="material-input"></span>
                             </div>
                             <button type="submit" class="btn btn-white btn-round btn-just-icon">
@@ -243,11 +243,13 @@
                                     <h6 class="category text-gray">Superman-ish</h6>
                                     <h4 class="card-title">Matt Hooper</h4>
                                     <p class="card-content">
-                                        And if you'd took to me like <br>
-                                        Gull takes to the wind<br>
-                                        Oh, I'd a-jumped from my trees<br>
-                                        And I'd a-danced like the king of the eyesores<br>
-                                        And the rest of our lives would have fared well...<br>
+                                        Strange how it turns out that way, yeah<br />
+                                        Could you show me dear?<br />
+                                        Something I've not seen<br />
+                                        Something infinitely interesting<br />
+                                        Could you show me dear?<br />
+                                        Something I've not seen<br />
+                                        Something infinitely interesting<br />
                                     </p>
                                     <a href="#pablo" class="btn btn-info btn-round">Share</a>
                                 </div>
