--- a/app/assets/pages/login/login.html
+++ b/app/assets/pages/login/login.html
@@ -75,21 +75,15 @@
 										<span class="input-group-addon">
 											<i class="material-icons">person_outline</i>
 										</span>
-
-					<!-- hardcoded -->	<div class="form-group is-empty">
 											<input type="text" class="form-control" placeholder="Nombre de usuario..." required>
-					<!-- hardcoded -->		<span class="material-input"></span>
-					<!-- hardcoded -->	</div>
 									</div>
 
 									<div class="input-group">
 										<span class="input-group-addon">
 											<i class="material-icons">lock_outline</i>
 										</span>
-					<!-- hardcoded -->	<div class="form-group is-empty">
-					<!-- hardcoded -->		<input type="password" placeholder="Contraseña..." class="form-control" required/>
-											<span class="material-input"></span>
-					<!-- hardcoded -->	</div>
+											<input type="password" placeholder="Contraseña..." class="form-control" required/>
+										<span class="material-input"></span>
 									</div>
 
 									<!-- If you want to add a checkbox to this form, uncomment this code
