--- a/app/assets/pages/signup/signup.html
+++ b/app/assets/pages/signup/signup.html
@@ -75,30 +75,23 @@
 										<span class="input-group-addon">
 											<i class="material-icons">person_outline</i>
 										</span>
-					<!-- hardcoded -->	<div class="form-group is-empty is-focused"> <!-- is-focused adds css purple line -->						
 											<input type="text" class="form-control" placeholder="Primer Nombre..." required>
-					<!-- hardcoded -->		<span class="material-input"></span>
-					<!-- hardcoded -->	</div>
 									</div>
 
 									<div class="input-group">
 										<span class="input-group-addon">
 											<i class="material-icons">mail_outline</i>
 										</span>
-					<!-- hardcoded -->	<div class="form-group is-empty">					
 											<input type="text" class="form-control" placeholder="Correo..." required>
-					<!-- hardcoded -->		<span class="material-input"></span>
-					<!-- hardcoded -->	</div>
 									</div>
 
 									<div class="input-group">
 										<span class="input-group-addon">
 											<i class="material-icons">lock_outline</i>
 										</span>
-					<!-- hardcoded -->	<div class="form-group is-empty">					
-											<input type="password" placeholder="Contraseña..." class="form-control" required/>
-					<!-- hardcoded -->		<span class="material-input"></span>
-					<!-- hardcoded -->	</div>					
+										
+										<input type="password" placeholder="Contraseña..." class="form-control" required>
+									
 									</div>
 
 									<!-- If you want to add a checkbox to this form, uncomment this code
