restyled buttons, detailes page, page lanague to es, fixed bottom nav on left wrapper

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8" />
@@ -144,7 +144,6 @@
                                 </div>
                                 <div class="card-content">
                                     <p class="category">Cirugías Totales</p>
-                                    
                                     <h3 class="title">15</h3>                             
                                 </div>
                                 <div class="card-footer">
@@ -154,7 +153,7 @@
                                 </div>
                             </div>
                         </div>
-                         <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-4 col-sm-6">
                             <div class="card card-stats">
                                 <div class="card-header" data-background-color="green">
                                     <i class="material-icons">date_range</i>
