--- a/entrada1.html
+++ b/entrada1.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8" />
@@ -155,11 +155,14 @@
                                     <i class="material-icons">date_range</i><p>Fecha:</p>
                                 </div>
                             
-                                <div class="form-control-hover card-footer2">
+                                <div class="form-control-hover card-footer2" >
                                     <div class="form-control dropdown-toggle" id="datetimepicker1" required>
                                         <form class="" method="post">
                                              <!-- Date input -->                                           
                                         <input class="form-control dropdown-toggle" id="date" name="date" placeholder="DD/MM/YYY" type="text"/>  
+                                        <span class="form-control-feedback">
+                                            <i class="material-icons">done</i>
+                                        </span>
                                     </form> 
                                     </div>
                                 </div>
@@ -222,6 +225,7 @@
                     </div>
 
 
+
                     <!-- Datos Pacientes -->
                     <div class="row">
                         <div class="col-md-6">
@@ -254,7 +258,7 @@
                                 <div class="card-header2 card-header-inline" data-background-color="green">
                                     <div class="btn-sim pull-right">
                                         <input class="btn-sim" type="checkbox" name="sim1" id="sim1" />
-                                        <label class="btn btn-sm" for="sim1" id="statsim">Simulación</label>
+                                        <label class="btn btn-sm" for="sim1" id="statsim">Fue Simulación</label>
                                     </div>
                                     <p>La Cirugía Fue</p>
                                 </div>
