--- a/app/assets/pages/dashboard/dashboard.html
+++ b/app/assets/pages/dashboard/dashboard.html
@@ -1,3 +1,4 @@
+
 <div>
     <div class="wrapper">
         <div class="sidebar" data-color="blue" data-image="../assets/img/sidebar-1.jpg">
@@ -202,11 +203,11 @@
                                 </div>
                                 <div class="card-footer">
                                     <div class="stats">
-                                        <span class="text-success"><img src="../assets/icons/scalpel.svg"></i></span> Cirujano 
+                                        <span class="text-success"><img src="./assets/icons/scalpel.svg"></i></span> Cirujano 
                                         <span style="opacity: 0">__</span>
-                                        <span class="text-success"><img src="../assets/icons/scissors.svg"></i></span> 1<sup>o</sup> ayudante
+                                        <span class="text-success"><img src="./assets/icons/scissors.svg"></i></span> 1<sup>o</sup> ayudante
                                         <span style="opacity: 0">__</span>
-                                        <span class="text-success"><img src="../assets/icons/band-aid.svg"></i></span> 2<sup>o</sup> ayudante  
+                                        <span class="text-success"><img src="./assets/icons/band-aid.svg"></i></span> 2<sup>o</sup> ayudante  
                                         
                                     </div>
                                 </div>
@@ -659,27 +660,27 @@
     </div>
 </div>
 <!--   Core JS Files   -->
-<script src="assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/material.min.js" type="text/javascript"></script>
+<script src="./assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
+<script src="./assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="./assets/js/material.min.js" type="text/javascript"></script>
 <!--  Charts Plugin -->
-<script src="assets/js/chartist.min.js"></script>
+<script src="./assets/js/chartist.min.js"></script>
 <!--  Dynamic Elements plugin -->
-<script src="assets/js/arrive.min.js"></script>
+<script src="./assets/js/arrive.min.js"></script>
 <!--  PerfectScrollbar Library -->
-<script src="assets/js/perfect-scrollbar.jquery.min.js"></script>
+<script src="./assets/js/perfect-scrollbar.jquery.min.js"></script>
 <!--  Notifications Plugin    -->
-<script src="assets/js/bootstrap-notify.js"></script>
+<script src="./assets/js/bootstrap-notify.js"></script>
 <!--  Google Maps Plugin    -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 <!-- Material Dashboard javascript methods -->
-<script src="assets/js/material-dashboard.js?v=1.2.0"></script>
+<script src="./assets/js/material-dashboard.js?v=1.2.0"></script>
 <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-<script src="assets/js/demo.js"></script>
+<script src="./assets/js/demo.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
 
-        // Javascript method's body can be found in assets/js/demos.js
+        // Javascript method's body can be found in app/assets/js/demos.js
         demo.initDashboardPageCharts();
 
     });
