--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="//unpkg.com/angular-ui-router/release/angular-ui-router.min.js"> </script>
 
+   <!--  Material Dashboard CSS    -->
+   <link href="./assets/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
+   <!--  CSS for Demo Purpose, don't include it in your project     -->
+   <link href="./assets/css/demo.css" rel="stylesheet" />
    
+
+   <!--  PerfectScrollbar Library -->
+   <script src="./assets/js/perfect-scrollbar.jquery.min.js"></script>
 	
 </head>
 
@@ -55,4 +62,7 @@
 
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
 <script src="./assets/js/material-kit.js" type="text/javascript"></script>
+
+
+
 </html>
