managed to get dashboard working on angular

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 
 	<!-- CSS Files -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet"/>
+    <link href="assets/css/demo.css" rel="stylesheet" />
 
 	<!-- Angular Stuff -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
